src/tests/snapshots/synoik__tests__window_opening__check_target_size@dhF500-b-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "default window height: F500\nborder on\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 608 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 608 × 500, bounds: 1240 × 680, states: [Activated]
