src/tests/snapshots/synoik__tests__window_opening__check_target_size@dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "default window height: P0.5\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 608 × 328, bounds: 1240 × 680, states: []

post-map configures:
size: 608 × 328, bounds: 1240 × 680, states: []
size: 608 × 328, bounds: 1240 × 680, states: [Activated]
